kubernetes/mediacenter/mediacenter.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mediacenter
