kubernetes/mediacenter/plex.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: mediacenter
spec:
  selector:
    app: plex
  ports:
  - name: http
    port: 32400
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  namespace: mediacenter
spec:
  serviceName: plex
  selector:
    matchLabels:
      app: plex
  replicas: 1
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: data
        - mountPath: /series
          name: series
        - mountPath: /movies
          name: movies
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 0
          periodSeconds: 10
          tcpSocket:
            port: 32400
          timeoutSeconds: 1
      volumes:
      - name: movies
        persistentVolumeClaim:
          claimName: movies
      - name: series
        persistentVolumeClaim:
          claimName: series
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 20Gi
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: mediacenter
spec:
  hostnames:
  - plex.bgalhardo.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: plex
      port: 32400
