kubernetes/mediacenter/prowlarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: mediacenter
spec:
  selector:
    matchLabels:
      app: prowlarr
  replicas: 1
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:develop
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config.xml
          subPath: config.xml
          name: config
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "cp /config.xml /config/config.xml"]
        livenessProbe:
          httpGet:
            path: /ping
            port: 9696
          initialDelaySeconds: 10
          periodSeconds: 5
      volumes:
      - name: config
        secret:
          secretName: prowlarr-config
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: mediacenter
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: mediacenter
spec:
  hostnames:
  - prowlarr.bgalhardo.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: local
    namespace: system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prowlarr
      port: 9696
