kubernetes/mediacenter/radarr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: mediacenter
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 1
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config.xml
          subPath: config.xml
          name: config
        - mountPath: /downloads
          name: downloads
        - mountPath: /movies
          name: movies
        lifecycle:
          postStart:
            exec:
              command:
              - "/bin/sh"
              - "-c"
              - |
                cp /config.xml /config/config.xml;
                sleep 30;
                api_key=$(xmlstarlet sel -t -v "/Config/ApiKey" /config.xml);
                data=$(curl -XGET -H "X-Api-Key: $api_key" localhost:7878/api/v3/movie | jq '{"name":"RefreshMovie","movieIds": [ .[].id ]}');
                curl -s -d "$data" -XPOST -H "X-Api-Key: $api_key" -H "Content-Type: application/json" localhost:7878/api/v3/command
        livenessProbe:
          httpGet:
            path: /ping
            port: 7878
          initialDelaySeconds: 10
          periodSeconds: 5
      volumes:
      - name: config
        secret:
          secretName: radarr-config        
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: movies
        persistentVolumeClaim:
          claimName: movies
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: mediacenter
spec:
  selector:
    app: radarr
  ports:
  - name: http
    port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: mediacenter
spec:
  hostnames:
  - radarr.bgalhardo.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: local
    namespace: system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: radarr
      port: 7878
