kubernetes/mediacenter/sabnzbd.yml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: mediacenter
spec:
  selector:
    app: sabnzbd
  ports:
    - port: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
  namespace: mediacenter
spec:
  serviceName: sabnzbd
  selector:
    matchLabels:
      app: sabnzbd
  replicas: 1
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: lscr.io/linuxserver/sabnzbd:latest
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /config
          name: data
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: downloads
#        nfs: 
#          server: 192.168.1.198
#          path: /mnt/temp/downloads
        persistentVolumeClaim:
          claimName: downloads
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: longhorn
      resources:
        requests:
          storage: 100Mi
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: mediacenter
spec:
  hostnames:
  - sabnzbd.bgalhardo.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: local
    namespace: system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sabnzbd
      port: 8080
